--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   </head>
   <body>
     <div class="container">
+      <div class="hamburger-menu">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+      </div>
     <script src="script.js "></script>
   </body>
 </html>
