--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="line line-2"></div>
         <div class="line line-3"></div>
       </div>
+      <header class="header">
     <script src="script.js "></script>
   </body>
 </html>
