--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="line line-3"></div>
       </div>
       <header class="header">
+       <div class="img-wrapper">
     <script src="script.js "></script>
   </body>
 </html>
