--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       </div>
       <header class="header">
        <div class="img-wrapper">
+        <img src="./assets/images/bg.jpg" />
+      </div>
     <script src="script.js "></script>
   </body>
 </html>
