--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
        <div class="img-wrapper">
         <img src="./assets/images/bg.jpg" />
       </div>
+      <div class="banner">
+        <h1>Architecture & Interior Design</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button>Discover now</button>
+      </div>
     <script src="script.js "></script>
   </body>
 </html>
