--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <button>Discover now</button>
       </div>
+    </header>
     <script src="script.js "></script>
   </body>
 </html>
