--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <header class="header">
        <div class="img-wrapper">
-        <img src="./assets/images/bg.jpg" />
+        <img src="/asssets/images/bg.jpg" />
       </div>
       <div class="banner">
         <h1>Architecture & Interior Design</h1>
