--- a/index.html
+++ b/index.html
@@ -57,6 +57,75 @@
         <a href="#"><i class="fab fa-twitter"></i></a>
       </div>
     </section>
+    <section class="about-us">
+      <div class="section-header">
+        <h1 class="section-heading">About us</h1>
+        <div class="underline"></div>
+          <div class="services">
+            <div class="service">
+              <div class="service-header">
+                <i class="fas fa-pen-nib"></i>
+                <h3>Interior</h3>
+                <p class="service-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+                </p>
+              </div>
+            </div>
+
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-pain-roller"></i>
+              <h3>Interior</h3>
+              <p class="service-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+              </p>
+            </div>
+          </div>
+  
+
+        <div class="service">
+          <div class="service-header">
+            <i class="fas fa-pen-nib"></i>
+            <h3>Interior</h3>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+            </p>
+          </div>
+        </div>
+
+      <div class="service">
+        <div class="service-header">
+          <i class="fas fa-pen-nib"></i>
+          <h3>Interior</h3>
+          <p class="service-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+          </p>
+        </div>
+      </div>
+
+    <div class="service">
+      <div class="service-header">
+        <i class="fas fa-pen-nib"></i>
+        <h3>Interior</h3>
+        <p class="service-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="service">
+    <div class="service-header">
+      <i class="fas fa-pen-nib"></i>
+      <h3>Interior</h3>
+      <p class="service-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+      </p>
+    </div>
+  </div>
+</div>
+      </div>
+    </section>
     <script src="script.js "></script>
   </body>
 </html>
