--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
           <div class="service">
             <div class="service-header">
-              <i class="fas fa-pain-roller"></i>
-              <h3>Interior</h3>
+              <i class="fas fa-paint-roller"></i>
+              <h3>Exterior</h3>
               <p class="service-text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
               </p>
