--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
         <div class="service">
           <div class="service-header">
-            <i class="fas fa-pen-nib"></i>
-            <h3>Interior</h3>
+            <i class="fas fa-pencil-alt"></i>
+            <h3>Design</h3>
             <p class="service-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
             </p>
@@ -95,8 +95,8 @@
 
       <div class="service">
         <div class="service-header">
-          <i class="fas fa-pen-nib"></i>
-          <h3>Interior</h3>
+          <i class="fas fa-paint-brush"></i>
+          <h3>Decoration</h3>
           <p class="service-text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
           </p>
@@ -105,7 +105,7 @@
 
     <div class="service">
       <div class="service-header">
-        <i class="fas fa-pen-nib"></i>
+        <i class="fas fa-ruler-combined"></i>
         <h3>Interior</h3>
         <p class="service-text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
@@ -116,8 +116,8 @@
 
   <div class="service">
     <div class="service-header">
-      <i class="fas fa-pen-nib"></i>
-      <h3>Interior</h3>
+      <i class="far fa-building"></i>
+      <h3>Execution</h3>
       <p class="service-text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
       </p>
