--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       </p>
     </div>
   </div>
-</div>
-      </div>
+  <div class="about-us-img-wrapper"><img src="/asssets/images/house.png" alt="house"></div>
+ </div>
     </section>
     <script src="script.js "></script>
   </body>
