--- a/index.html
+++ b/index.html
@@ -56,8 +56,85 @@
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
       </div>
+    </section> <section class="about-us">
+      <div class="section-header">
+        <h1 class="section-heading">About Us</h1>
+        <div class="underline"></div>
+      </div>
+      <div class="services">
+        <div class="service">
+          <div class="service-header">
+            <i class="fas fa-pen-nib"></i>
+            <h3>Interior</h3>
+          </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+              debitis dolorum labore maxime modi. Repellendus magnam ab enim
+              adipisci esse delectus doloribus doloremque ea tenetur.
+            </p>
+        </div>
+        <div class="service">
+          <div class="service-header">
+            <i class="fas fa-paint-roller"></i>
+            <h3>Exterior</h3>
+          </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+              debitis dolorum labore maxime modi. Repellendus magnam ab enim
+              adipisci esse delectus doloribus doloremque ea tenetur.
+            </p>
+        </div>
+        <div class="service">
+          <div class="service-header">
+            <i class="fas fa-pencil-alt"></i>
+            <h3>Design</h3>
+          </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+              debitis dolorum labore maxime modi. Repellendus magnam ab enim
+              adipisci esse delectus doloribus doloremque ea tenetur.
+            </p>
+        </div>
+        <div class="service">
+          <div class="service-header">
+            <i class="fas fa-paint-brush"></i>
+            <h3>Decoration</h3>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+              debitis dolorum labore maxime modi. Repellendus magnam ab enim
+              adipisci esse delectus doloribus doloremque ea tenetur.
+            </p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-header">
+            <i class="fas fa-ruler-combined"></i>
+            <h3>Planning</h3>
+          </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+              debitis dolorum labore maxime modi. Repellendus magnam ab enim
+              adipisci esse delectus doloribus doloremque ea tenetur.
+            </p>
+        </div>
+        <div class="service">
+          <div class="service-header">
+            <i class="far fa-building"></i>
+            <h3>Execution</h3>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+              debitis dolorum labore maxime modi. Repellendus magnam ab enim
+              adipisci esse delectus doloribus doloremque ea tenetur.
+            </p>
+          </div>
+        </div>
+        <div class="about-us-img-wrapper">
+          <img src="/asssets/images/house.png">
+        </div>
+      </div>
     </section>
-    <section class="about-us">
+  </div>
+    <!-- <section class="about-us">
       <div class="section-header">
         <h1 class="section-heading">About us</h1>
         <div class="underline"></div>
@@ -66,20 +143,20 @@
               <div class="service-header">
                 <i class="fas fa-pen-nib"></i>
                 <h3>Interior</h3>
-                <p class="service-text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
-                </p>
               </div>
+              <p class="service-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+              </p>
             </div>
 
           <div class="service">
             <div class="service-header">
               <i class="fas fa-paint-roller"></i>
               <h3>Exterior</h3>
-              <p class="service-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
-              </p>
             </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+            </p>
           </div>
   
 
@@ -87,45 +164,45 @@
           <div class="service-header">
             <i class="fas fa-pencil-alt"></i>
             <h3>Design</h3>
-            <p class="service-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
-            </p>
           </div>
+          <p class="service-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+          </p>
         </div>
 
       <div class="service">
         <div class="service-header">
           <i class="fas fa-paint-brush"></i>
           <h3>Decoration</h3>
-          <p class="service-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
-          </p>
         </div>
+        <p class="service-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+        </p>
       </div>
 
     <div class="service">
       <div class="service-header">
         <i class="fas fa-ruler-combined"></i>
         <h3>Interior</h3>
-        <p class="service-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
-        </p>
       </div>
+      <p class="service-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+      </p>
     </div>
     
     <div class="service">
       <div class="service-header">
         <i class="far fa-building"></i>
         <h3>Execution</h3>
-        <p class="service-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
-        </p>
       </div>
+      <p class="service-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus earum impedit quod consectetur quibusdam natus iusto praesentium, commodi mollitia eius aut sunt autem laboriosam eos?
+      </p>
     </div>
     <div class="about-us-img-wrapper"><img src="/asssets/images/house.png" alt="house"></div>
   </div>
 </div>
-    </section>
+    </section> -->
     <script src="script.js "></script>
   </body>
 </html>
