--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@
         </div>
       </div>
     </section>
+    <section class="team">
+      
+    </section>
   </div>
+
+  
     <script src="script.js "></script>
   </body>
 </html>
