--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
       </div>
-    </section> <section class="about-us">
+    </section>
+     <section class="about-us">
       <div class="section-header">
         <h1 class="section-heading">About Us</h1>
         <div class="underline"></div>
@@ -134,7 +135,10 @@
       </div>
     </section>
     <section class="team">
-      
+      <div class="section-header">
+        <h1 class="section-heading">About Us</h1>
+        <div class="underline"></div>
+      </div>
     </section>
   </div>
 
