--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
         </div>
       </div>
     </section>
+
     <section class="team">
       <div class="section-header">
-        <h1 class="section-heading">About Us</h1>
+        <h1 class="section-heading">our Team</h1>
         <div class="underline"></div>
       </div>
     </section>
