--- a/index.html
+++ b/index.html
@@ -185,7 +185,10 @@
       </section>
 
       <setion class="contact">
-<div class="contact-wrapper"></div>
+<div class="contact-wrapper">
+  <div class="contact-left"></div>
+  <div class="contact-right"></div>
+</div>
       </setion>
 
     </div>
