--- a/index.html
+++ b/index.html
@@ -185,12 +185,27 @@
       </section>
 
       <setion class="contact">
-<div class="contact-wrapper">
-  <div class="contact-left"></div>
-  <div class="contact-right"></div>
-</div>
+        <div class="contact-wrapper">
+          <div class="contact-left"></div>
+          <div class="contact-right"></div>
+          <h1 class="contact-heading">Contact</h1>
+          <form>
+            <div class="input-group">
+              <input type="text" class="field" />
+              <label class="input-label">full Name</label>
+            </div>
+            <div class="input-group">
+              <input type="email" class="field" />
+              <label class="input-label">email</label>
+            </div>
+            <div class="input-group">
+              <textarea class="field"></textarea>
+              <label class="message">message</label>
+            </div>
+            <input type="submit" class="submit-btn" value="submit"/>
+          </form>
+        </div>
       </setion>
-
     </div>
     <script src="./script.js"></script>
     <script
